--- a/menu.html
+++ b/menu.html
@@ -69,14 +69,12 @@
             font-size: 18px;
         }
 
-        .new {
-            margin-top: 40px;
-            margin-left: 60px;
-            margin-right: 60px;
-            background-image: url('./Images/4.jfif');
+        .background {
+
+            background-image: url("./Images/p20.jpg");
             background-size: cover;
             background-position: center;
-            height: 400px;
+            height: 500px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -84,14 +82,9 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
-
-        .new img {
-            width: auto;
-            background-position: center;
-            height: 500px;
-            background-repeat: no-repeat;
+        .body {
+            background-color: #b4b4aa5b;
         }
-
 
         .fc {
             display: flex;
@@ -148,7 +141,6 @@
             height: 90px;
             bottom: 0;
         }
-
     </style>
 </head>
 
@@ -171,101 +163,104 @@
 
         </nav>
     </header>
-    <div class="new">
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="text">
-        <h1>Our Menu</h1>
-        <p>At Stan's coffee shop, we pride ourselves on offering a wide variety of freshly brewed coffee and
-            delicious treats.<br>
-            Whether you're looking for a quick caffeine fix of a leisurely brunch , we have something for
-            everyone.</p>
+    <div class="background"></div>
 
     </div>
-    <br>
-    <br>
-    <div class="fc">
-        <div class="coffee">
-            <img src="./Images/abc.webp" alt="Latte">
-            <p>Latte. Price:GHc20 <a href="#"></a></p>
-        </div>
-        <div class="coffee">
-            <img src="./Images/abc.jpeg" alt="Black Coffee">
-            <p>Black Coffee. Price: Ghc15</p>
-        </div>
-        <div class="coffee">
-            <img src="./Images/p6.jpeg" alt="Espresso">
-            <p>Espresso. Price: Ghc10</p>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="fc">
-        <div class="coffee">
-            <img src="./Images/p10.jpg" alt="Latte">
-            <p>Americano. Price:GHc20 <a href="#"></a></p>
-        </div>
-        <div class="coffee">
-            <img src="./Images/p8.webp" alt="Black Coffee">
-            <p>Cappuccino. Price: Ghc15</p>
-        </div>
-        <div class="coffee">
-            <img src="./Images/p9.jpg" alt="Espresso">
-            <p>Mocha. Price: Ghc10</p>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
-
-    <h1 class="text-pastries">Pastries</h1>
-    <br>
-
-    <div class="fc">
-        <div class="coffee">
-            <img src="./Images/p11.jpeg" alt="Latte">
-            <p>Cake. Price:GHc20 <a href="#"></a></p>
-        </div>
-        <div class="coffee">
-            <img src="./Images/p11.jpg" alt="Black Coffee">
-            <p>Pie. Price: Ghc15</p>
-        </div>
-        <div class="coffee">
-            <img src="./Images/p13.jpg
-            " alt="Cupcake image">
-            <p>Cupcake. Price: Ghc10</p>
-        </div>
-    </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <section id="location" class="text">
-        <h1>Our Location</h1>
-        <p>Come visit us at:</p>
-        <address>
-            123 Coffee Street,<br>
-            Kumasi, ks 56789
-        </address>
-        <p>We are open from 7:00 AM to 9:00 PM every day.</p>
-    </section>
-    <br>
-    <br>
-
-
-
-
-    <footer>   
+    <div class="body">
         <br>
-        
-            <p>&copy; 2024 Stan's coffee shop. All rights reserved.</p>
+        <br>
+        <br>
+        <div class="text">
+            <h1>Our Menu</h1>
+            <p>At Stan's coffee shop, we pride ourselves on offering a wide variety of freshly brewed coffee and
+                delicious treats.<br>
+                Whether you're looking for a quick caffeine fix of a leisurely brunch , we have something for
+                everyone.</p>
+
+        </div>
+        <br>
+        <br>
+        <div class="fc">
+            <div class="coffee">
+                <img src="./Images/abc.webp" alt="Latte">
+                <p>Latte. Price:GHc20 <a href="#"></a></p>
+            </div>
+            <div class="coffee">
+                <img src="./Images/abc.jpeg" alt="Black Coffee">
+                <p>Black Coffee. Price: Ghc15</p>
+            </div>
+            <div class="coffee">
+                <img src="./Images/p6.jpeg" alt="Espresso">
+                <p>Espresso. Price: Ghc10</p>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="fc">
+            <div class="coffee">
+                <img src="./Images/p10.jpg" alt="Latte">
+                <p>Americano. Price:GHc20 <a href="#"></a></p>
+            </div>
+            <div class="coffee">
+                <img src="./Images/p8.webp" alt="Black Coffee">
+                <p>Cappuccino. Price: Ghc15</p>
+            </div>
+            <div class="coffee">
+                <img src="./Images/p9.jpg" alt="Espresso">
+                <p>Mocha. Price: Ghc10</p>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+        <h1 class="text-pastries">Pastries</h1>
+        <br>
+
+        <div class="fc">
+            <div class="coffee">
+                <img src="./Images/p11.jpeg" alt="Latte">
+                <p>Cake. Price:GHc20 <a href="#"></a></p>
+            </div>
+            <div class="coffee">
+                <img src="./Images/p11.jpg" alt="Black Coffee">
+                <p>Pie. Price: Ghc15</p>
+            </div>
+            <div class="coffee">
+                <img src="./Images/p13.jpg
+            " alt="Cupcake image">
+                <p>Cupcake. Price: Ghc10</p>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section id="location" class="text">
+            <h1>Our Location</h1>
+            <p>Come visit us at:</p>
+            <address>
+                123 Coffee Street,<br>
+                Kumasi, ks 56789
+            </address>
+            <p>We are open from 7:00 AM to 9:00 PM every day.</p>
+        </section>
+        <br>
+        <br>
+    </div>
+
+
+
+
+    <footer>
+        <br>
+
+        <p>&copy; 2024 Stan's coffee shop. All rights reserved.</p>
     </footer>
 
 
