--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,10 @@
 
         header {
             position: sticky;
-            top: 0;
             width: 100%;
             background-color: white;
             padding: 30px 0px;
             text-align: center;
-            z-index: 1000;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
 
@@ -34,7 +31,6 @@
             margin: 0 10px;
             text-decoration: none;
             font-weight: 550;
-            transition: font-weight 0.3s ease;
         }
 
         nav a:hover {
@@ -80,18 +76,16 @@
         .about-us-section {
             font-family: 'Playfair Display', serif;
             text-align: center;
-            margin-bottom: 10px 0;
             background-color: #fff;
             padding: 50px 20px;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin: auto;
             border-radius: 10px;
             max-width: 60%;
         }
 
         .about-us-section h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin-bottom: 20px;
             color: #5d8e28;
         }
@@ -100,7 +94,6 @@
             font-size: 1.2em;
             margin-bottom: 20px;
             color: #333;
-            line-height: 1.6;
         }
 
         .about-us-section img {
@@ -136,7 +129,6 @@
             text-align: center;
             max-width: 100%;
             height: auto;
-            bottom: 0;
             padding: 20px;
         }
 
@@ -228,7 +220,7 @@
                 reach out to us.</p>
             <p>You can also visit us at our coffee shop or send us an email.</p>
 
-            <form action="submit_contact_form.php" method="post">
+            <form action="#" method="post">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <input type="tel" name="phone" placeholder="Your Phone Number">
