--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
             padding: 40px 20px;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
+            margin:auto;
             border-radius: 10px;
             max-width: 800px;
         }
