--- a/index.html
+++ b/index.html
@@ -63,47 +63,17 @@
     }
 
     .background {
-
       background-image: url("./Images/p20.jpg");
       background-size: cover;
       background-position: center;
       height: 500px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
 
 
-
-    .specials {
-      font-family: "Playfair Display", serif;
-      font-size: 3em;
-      text-align: center;
-      margin-bottom: 20px;
-      color: #f8b400;
-    }
-
-    .specials-p {
-      font-family: "Playfair Display", serif;
-      font-size: 1.2em;
-      text-align: center;
-      margin-bottom: 10px 0;
-    }
-
-    section {
-      padding: 20px 80px;
-    }
-
-    section h2 {
-      font-family: "Playfair Display", serif;
-    }
 
     .fc {
       display: flex;
-      flex-wrap: wrap;
       justify-content: space-around;
       margin: 0px 50px;
     }
@@ -140,12 +110,12 @@
       font-family: 'Playfair Display', serif;
       font-size: 1.2em;
       text-align: center;
-      margin-bottom: 10px 0;
+      margin-bottom: 10px;
     }
 
 
     #location h1 {
-      font-family: "Playfair Display", serif;
+      font-family: "Playfair Display", sans-serif;
       font-size: 3em;
       text-align: center;
       margin-bottom: 40px;
@@ -174,7 +144,6 @@
       text-align: center;
       max-width: 100%;
       height: auto;
-      bottom: 0;
       padding: 20px;
     }
   </style>
@@ -237,7 +206,7 @@
 
 
 
-    <section id="location">
+    <div id="location">
       <h1>Our Location</h1>
       <p>Come visit us at:</p>
       <address>
@@ -245,7 +214,7 @@
         Kumasi, ks 56789
       </address>
       <p>We are open from 7:00 AM to 9:00 PM every day.</p>
-    </section>
+    </div>
 
     <br />
     <br />
