--- a/menu.html
+++ b/menu.html
@@ -17,13 +17,10 @@
 
         header {
             position: sticky;
-            top: 0;
             width: 100%;
             background-color: white;
             padding: 30px 0px;
             text-align: center;
-            z-index: 1000;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
 
@@ -34,12 +31,10 @@
             margin: 0 10px;
             text-decoration: none;
             font-weight: 550;
-            transition: font-weight 0.3s ease;
         }
 
         nav a:hover {
             font-size: 15px;
-
         }
 
         nav a:active {
@@ -70,16 +65,11 @@
         }
 
         .background {
-
             background-image: url("./Images/p20.jpg");
             background-size: cover;
             background-position: center;
             height: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             color: #fff;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .body {
@@ -88,9 +78,8 @@
 
         .fc {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-around;
-            margin: 0px 90px;
+            margin: 0 90px;
         }
 
 
@@ -137,9 +126,9 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            width: 100%;
-            height: 90px;
-            bottom: 0;
+            max-width: 100%;
+            height: auto;
+            padding: 20px;
         }
     </style>
 </head>
@@ -184,7 +173,7 @@
         <div class="fc">
             <div class="coffee">
                 <img src="./Images/abc.webp" alt="Latte">
-                <p>Latte. Price:GHc20 <a href="#"></a></p>
+                <p>Latte. Price:GHc20</p>
             </div>
             <div class="coffee">
                 <img src="./Images/abc.jpeg" alt="Black Coffee">
@@ -232,8 +221,7 @@
                 <p>Pie. Price: Ghc15</p>
             </div>
             <div class="coffee">
-                <img src="./Images/p13.jpg
-            " alt="Cupcake image">
+                <img src="./Images/p13.jpg" alt="Cupcake image">
                 <p>Cupcake. Price: Ghc10</p>
             </div>
         </div>
